test/algeff/wrong/type1.kk

effect amb {
  ctl flip() : bool
}


fun amb_handle() {
  handler {
    return(x)  -> [x]
    ctl flip() -> [resume(False)]
  }
}
